--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
     </div>
   </section><!-- End Hero Section -->
 
+
+  <div class="whatsapp_main">
+    <a href="https://wa.me/919854564560?text=I'm%20really%20keen%20on%20learning%20more%20about%20your%20online%20fitness%20brand%20and%20the%20range%20of%20services%20you%20provide.%20Could%20you%20please%20share%20the%20details%20with%20me%3F" target="_blank"><img src="assets/img/whatsapp.png"  class="whatsapp_img"></a>
+    </div>
+
   <main id="main">
 
     <!-- ======= About Section ======= -->
@@ -187,6 +192,7 @@
   <!-- End Footer -->
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
 
   <div id="preloader"></div>
 
