--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
   <div class="whatsapp_main">
-    <a href="https://wa.me/919854564560?text=I'm%20really%20keen%20on%20learning%20more%20about%20your%20online%20fitness%20brand%20and%20the%20range%20of%20services%20you%20provide.%20Could%20you%20please%20share%20the%20details%20with%20me%3F" target="_blank"><img src="assets/img/whatsapp.png"  class="whatsapp_img"></a>
+    <a href="https://wa.me/919854564560?text=I'm%20really%20keep%20on%20learning%20more%20about%20your%20online%20fitness%20brand%20and%20the%20range%20of%20services%20you%20provide.%20Could%20you%20please%20share%20the%20details%20with%20me%3F" target="_blank"><img src="assets/img/whatsapp.png"  class="whatsapp_img"></a>
     </div>
 
   <main id="main">
