--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -120,6 +126,37 @@
       </div>
     </section>
 
+    <section id="profile" class="prof">
+      <div class="container" style="max-width: 100%;">
+        <div class="heros">
+            <img src="assets/img/woman-helping-man-gym.jpg" alt="Fitness Image" class="heros-image">
+            <h1 class="heros-title">IT'S NOT JUST FITNESS, IT'S A LIFESTYLE UPGRADE</h1>
+            <!-- <div class="heros-text-box">
+              <p>Elite online coaching & Transformation Excellence</p>
+            </div> -->
+            <!-- <div class="credentials-box">
+                <p class="credentials">
+                    NASM-CPT | MPT level 6 | CPT level 6 | Certified Sports Nutritionist <br>
+                    BFR | Diabetes PT | Golds Gym Special Population | Diploma in PT
+                </p>
+            </div> -->
+        </div>
+        <!-- <div class="content">
+            <h2>ANIMATION Title:</h2>
+            <div class="trainer-info">
+                <div class="badge">
+                    <p>Badge jpg</p>
+                </div>
+                <div class="explanation">
+                    <p>Explanation 1:</p>
+                </div>
+            </div>
+        </div> -->
+    </div>
+
+    </section>
+
+    
     
 
   <!-- ======= Footer ======= -->
@@ -195,6 +232,10 @@
 
 
   <div id="preloader"></div>
+
+  <!-- <div id="preloader" class="loading-logo">
+    <img src="assets/img/favicon.ico" alt="Loading..." />
+  </div> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
