--- a/index.html
+++ b/index.html
@@ -71,23 +71,44 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero d-flex align-items-center section-bg">
-    <div class="container">
-      <div class="row justify-content-between gy-5">
-        <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
-          <h2 data-aos="fade-up">Elevate Your Life<br>Embrace Fitness for Holistic Wellness</h2>
-          <p data-aos="fade-up" data-aos-delay="100"> Explore the transformative power of fitness, enhancing physical health, mental clarity, and overall well-being. Join us on the journey towards holistic wellness.</p>
-          <!-- <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#book-a-table" class="btn-book-a-table">Book a Table</a>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
-          </div> -->
-        </div>
-        <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="300" style="max-width: 119vh;">
-        </div>
+  <div id="hero" class="hero img-fluid">
+    <img src="/assets/img/woman-helping-man-gym.jpg" class="img-fluid" style="margin-top: 5rem;">
+    <h1 class="hero-title">IT'S NOT JUST FITNESS, IT'S A LIFESTYLE UPGRADE</h1>
+    <div class="heros-text-box">
+      <h3>Elite online coaching & Transformation Excellence</h3>
+    </div>
+  </div>
+
+  <div class="container-fluid " style="padding: 0;">
+    <div class="row" style="background-color: black; height: 10vh; width: 100%; position: relative; margin: 0;">
+
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div class="row d-flex  flex-wrap flex-row">
+      <div class="col-6 col-sm-6 col-md-6 col-lg-6">
+        <h2 class="badge-text">NASM PERSONAL TRAINER<h2>
+          <img src="assets/img/Badge NASM (1).svg" class="img-fluid badge-img">
+      </div>
+      <div class="col-6 col-sm-6 col-md-6 col-lg-6">
+        <h2 class="badge-def">What is an NASM personal trainer?</h2><br>
+        <p class="badge-para">An NASM personal trainer, distinguished by
+          the prestigious NASM badge, embodies
+          international excellence in fitness. This
+          globally recognized certification represents
+          the highest standards in exercise science,
+          ensuring trainers use cutting-edge,
+          evidence-based methods. With NASM's elite
+          training, these professionals craft highly
+          effective, scientifically validated programs
+          to achieve exceptional results and
+          transform your fitness journey.</p>
       </div>
     </div>
-  </section><!-- End Hero Section -->
+  </div>
+  <!-- End Hero Section -->
 
 
   <div class="whatsapp_main">
@@ -125,39 +146,6 @@
 
       </div>
     </section>
-
-    <section id="profile" class="prof">
-      <div class="container" style="max-width: 100%;">
-        <div class="heros">
-            <img src="assets/img/woman-helping-man-gym.jpg" alt="Fitness Image" class="heros-image">
-            <h1 class="heros-title">IT'S NOT JUST FITNESS, IT'S A LIFESTYLE UPGRADE</h1>
-            <!-- <div class="heros-text-box">
-              <p>Elite online coaching & Transformation Excellence</p>
-            </div> -->
-            <!-- <div class="credentials-box">
-                <p class="credentials">
-                    NASM-CPT | MPT level 6 | CPT level 6 | Certified Sports Nutritionist <br>
-                    BFR | Diabetes PT | Golds Gym Special Population | Diploma in PT
-                </p>
-            </div> -->
-        </div>
-        <!-- <div class="content">
-            <h2>ANIMATION Title:</h2>
-            <div class="trainer-info">
-                <div class="badge">
-                    <p>Badge jpg</p>
-                </div>
-                <div class="explanation">
-                    <p>Explanation 1:</p>
-                </div>
-            </div>
-        </div> -->
-    </div>
-
-    </section>
-
-    
-    
 
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
