--- a/index.html
+++ b/index.html
@@ -80,7 +80,19 @@
   </div>
 
   <div class="container-fluid " style="padding: 0;">
-    <div class="row" style="background-color: black; height: 10vh; width: 100%; position: relative; margin: 0;">
+    <div class="row anim-title" style="background-color: black;">
+
+      <div class="col-12 col-md-4 mx-auto text-center">
+        <div class="content">
+            <div class="content__container">
+                <ul class="content__container__list">
+                    <li class="content__container__list__item">Performance</li>
+                    <li class="content__container__list__item">Nutrition</li>
+                    <li class="content__container__list__item">Wellness</li>
+                </ul>
+            </div>
+        </div>
+    </div>   
 
     </div>
   </div>
@@ -89,7 +101,7 @@
   <div class="container">
     <div class="row d-flex  flex-wrap flex-row">
       <div class="col-6 col-sm-6 col-md-6 col-lg-6">
-        <h2 class="badge-text">NASM PERSONAL TRAINER<h2>
+        <!-- <h2 class="badge-text">NASM PERSONAL TRAINER<h2> -->
           <img src="assets/img/Badge NASM (1).svg" class="img-fluid badge-img">
       </div>
       <div class="col-6 col-sm-6 col-md-6 col-lg-6">
