--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-lg-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/logo web.svg" class="img-fluid" alt="Logo">
+        <img src="assets/img/logo web.svg" class="img-fluid logo" alt="Logo">
       </a>
 
       <nav id="navbar" class="navbar">
@@ -63,7 +63,7 @@
         </ul>
       </nav><!-- .navbar -->
 
-      <a class="btn-book-a-table" href="#about">Take a Look</a>
+      <a class="btn-book-a-table look" href="#about">Take a Look</a>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
@@ -72,7 +72,7 @@
 
   <!-- ======= Hero Section ======= -->
   <div id="hero" class="hero img-fluid">
-    <img src="/assets/img/woman-helping-man-gym.jpg" class="img-fluid" style="margin-top: 5rem;">
+    <img src="/assets/img/woman-helping-man-gym.jpg" class="img-fluid" style="margin-top: 4.3rem; max-width: 103%;">
     <h1 class="hero-title">IT'S NOT JUST FITNESS, IT'S A LIFESTYLE UPGRADE</h1>
     <div class="heros-text-box">
       <h3>Elite online coaching & Transformation Excellence</h3>
@@ -135,7 +135,6 @@
 
         <div class="section-header">
           <h2>About Us</h2>
-          <p>Learn More <span>About Us</span></p>
         </div>
 
         <div class="row">
