--- a/index.html
+++ b/index.html
@@ -198,29 +198,31 @@
 
   <!-- ======= PROGRAMS ======= -->
 
-    <div class="container mt-3">
-      <div class="row">
-        <div class="col-lg-6 prgm-title">
-          <img src="assets/img/icons/1  our programs (1).svg" class="icon-prgms">
-          <h2 style="margin: 0;">&nbsp;Total Body Transformation</h2>
-        </div>
-        <div class="col-lg-6 prgm-para mt-2">
-          <p>Transform your physique with our Total Body Transformation Program. This NASM-guided program
-            combines strength training, cardio, and flexibility exercises, with a focus on muscular development
-            and fat loss. Utilizing Blood Flow Restriction (BFR) training and evidence-based methods, it delivers
-            balanced, effective results, enhancing overall fitness and performance through scientifically
-            validated approaches.</p>
-        </div>
+  <div class="container mt-3">
+    <div class="row">
+      <!-- Column for the icon image -->
+      <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-title">
+        <img src="assets/img/icons/1  our programs (1).svg" class="icon-prgms">
+      </div>
+      
+      <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-para mt-2">
+        <h2 style="margin: 0;">Total Body Transformation</h2>
+        <p>Transform your physique with our Total Body Transformation Program. This NASM-guided program
+          combines strength training, cardio, and flexibility exercises, with a focus on muscular development
+          and fat loss. Utilizing Blood Flow Restriction (BFR) training and evidence-based methods, it delivers
+          balanced, effective results, enhancing overall fitness and performance through scientifically
+          validated approaches.</p>
       </div>
     </div>
+  </div>
 
     <div class="container mt-3">
       <div class="row">
-        <div class="col-lg-6 prgm-title">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-title">
           <img src="assets/img/icons/1  our programs (2).svg" class="icon-prgms">
-          <h2 style="margin: 0;">&nbsp;Strength and Conditioning Mastery</h2>
         </div>
-        <div class="col-lg-6 prgm-para mt-2">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-para mt-2">
+          <h2 style="margin: 0;">Strength and Conditioning Mastery</h2>
           <p>Elevate your strength and power with the Strength and Conditioning Mastery program. Based on
             NASM principles and evidence-based studies, this program focuses on progressive resistance
             training and conditioning exercises, designed to build strength and endurance with a systematic
@@ -231,11 +233,11 @@
 
     <div class="container mt-3">
       <div class="row">
-        <div class="col-lg-6 prgm-title">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-title">
           <img src="assets/img/icons/1  our programs (3).svg" class="icon-prgms">
-          <h2 style="margin: 0;">&nbsp;Functional Fitness Essentials</h2>
         </div>
-        <div class="col-lg-6 prgm-para mt-2">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-para mt-2">
+          <h2 style="margin: 0;">Functional Fitness Essentials</h2>
           <p>Improve your daily movement efficiency with the Functional Fitness Essentials program. This NASM-
             based program emphasizes exercises that enhance balance, stability, and functional strength. Using
             evidence-based methods, it helps boost everyday performance and prevent injuries through
@@ -246,11 +248,11 @@
 
     <div class="container mt-3">
       <div class="row">
-        <div class="col-lg-6 prgm-title">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-title">
           <img src="assets/img/icons/1  our programs (4).svg" class="icon-prgms">
-          <h2 style="margin: 0;">&nbsp;Posture Correction with Assessment</h2>
         </div>
-        <div class="col-lg-6 prgm-para mt-2">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-para mt-2">
+          <h2 style="margin: 0;">Posture Correction with Assessment</h2>
           <p>Achieve better alignment with our Posture Correction with Assessment Program. Guided by NASM
             principles, this program begins with a thorough posture evaluation and uses targeted corrective
             exercises to improve posture, enhance mobility, and reduce discomfort. It relies on evidence-based
@@ -261,11 +263,11 @@
 
     <div class="container mt-3">
       <div class="row">
-        <div class="col-lg-6 prgm-title">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-title">
           <img src="assets/img/icons/1  our programs (5) (1).svg" class="icon-prgms">
-          <h2 style="margin: 0;">&nbsp;Special Population Wellness and Management Program</h2>
         </div>
-        <div class="col-lg-6 prgm-para mt-2">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-para mt-2">
+          <h2 style="margin: 0;">Special Population Wellness and Management Program</h2>
           <p>Tailored for individuals with specific health needs, including diabetes and other lifestyle diseases,
             our Special Population Wellness and Management Program incorporates personalized fitness,
             nutrition, and lifestyle strategies. Using NASM-certified techniques and evidence-based approaches,
@@ -277,16 +279,47 @@
 
     <div class="container mt-3">
       <div class="row">
-        <div class="col-lg-6 prgm-title">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-title">
           <img src="assets/img/icons/1  our programs (6).svg" class="icon-prgms">
-          <h2 style="margin: 0;">&nbsp;Comprehensive Nutrition and Wellness Program</h2>
         </div>
-        <div class="col-lg-6 prgm-para mt-2">
+        <div class="col-6 col-sm-6 col-md-6 col-lg-6 prgm-para mt-2">
+          <h2 style="margin: 0;">Comprehensive Nutrition and Wellness Program</h2>
           <p>Optimize your health with our Comprehensive Nutrition and Wellness Program. This NASM-guided
             program provides personalized nutritional guidance and meal planning, supported by evidence-
             based studies. It complements your fitness goals with balanced nutrition, enhancing energy levels
             and overall well-being through a holistic approach.</p>
         </div>
+      </div>
+    </div>
+
+
+    <div class="container-fluid mt-4" style="padding: 0;">
+      <div class="row join-prgm" style="background-color: black;">
+        <h3>Why Join Our Online Fitness Program?</h3>
+      </div>
+    </div>
+    <div class="container mt-4">
+      <div class="row">
+        <div class="col-12" style="width: 80%;
+        margin: auto;
+        font-size: clamp(4px, 2vw, 19px);
+        text-align: -webkit-auto;">
+        <p>Join our online fitness program to experience a
+          comprehensive, personalized approach to health and
+          wellness. Our program, guided by NASM-certified
+          trainers, offers 24/7 support, scientifically-backed
+          training methods, and tailored workouts to meet your
+          unique goals. Benefit from our holistic approach that
+          includes muscular development, fat loss, functional
+          fitness, and specialized wellness strategies. With
+          flexible scheduling and expert guidance, you'll receive
+          the tools and motivation needed to achieve and
+          maintain your fitness goals from the comfort of your
+          home. Elevate your fitness journey with a program
+          designed to deliver exceptional, evidence-based
+          results.
+        </p>
+      </div>
       </div>
     </div>
 
