--- a/index.html
+++ b/index.html
@@ -323,6 +323,8 @@
       </div>
     </div>
 
+    
+
 
   <!-- ======= PROOF ======= -->
 
@@ -336,32 +338,38 @@
     </div>
   </div>
 
-
-  <div class="container-fluid" style="padding: 0; z-index: 0;">
-    <div class="row mt-4">
-      <div class="col-lg-4 mt-4">
-        <img src="assets/img/proofs/Untitled design_20240824_074417_0000.svg" class="img-fluid client-img">
+  <div class="container">
+    <div class="row mt-2">
+      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="5000">
+            <img src="assets/img/proofs/Untitled design_20240824_074631_0000.svg" class="d-block w-100" alt="..." style="height: 90vh;">
+          </div>
+          <div class="carousel-item" data-bs-interval="5000">
+            <img src="assets/img/proofs/Untitled design_20240824_074417_0000.svg" class="d-block w-100" alt="..." style="height: 90vh;">
+          </div>
+          <div class="carousel-item" data-bs-interval="5000">
+            <img src="assets/img/proofs/Untitled design_20240824_074736_0000.svg" class="d-block w-100" alt="..." style="height: 90vh;">
+          </div>
+          <div class="carousel-item" data-bs-interval="5000">
+            <img src="assets/img/proofs/Untitled design_20240824_075826_0000.svg" class="d-block w-100" alt="..." style="height: 90vh;">
+          </div>
+          <div class="carousel-item">
+            <img src="assets/img/proofs/Untitled design_20240824_075017_0000.svg" class="d-block w-100" alt="..." style="height: 90vh;">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-
-      <div class="col-lg-4 mt-4">
-        <img src="assets/img/proofs/Untitled design_20240824_074614_0000.svg" class="img-fluid client-img">
-      </div>
-
-      <div class="col-lg-4 mt-4">
-        <img src="assets/img/proofs/Untitled design_20240824_074736_0000.svg" class="img-fluid client-img">
-      </div>
-    </div>
-    <div class="row mt-3">
-      <div class="col-lg-6 mt-4">
-        <img src="assets/img/proofs/Untitled design_20240824_075826_0000.svg" class="img-fluid client-img">
-      </div>
-
-      <div class="col-lg-6 mt-4">
-        <img src="assets/img/proofs/Untitled design_20240824_075017_0000.svg" class="img-fluid client-img">
-      </div>
-    </div>
-  </div>
-
+</div>
+</div>
+  
 
   <div class="container-fluid mt-5" style="padding: 0;">
     <div class="row join-prgm phase" style="background-color: black; height: 5vh;">
